<resources>
    <string name="app_name">智能管家</string>
    <string name="tab_name_0">服务管家</string>
    <string name="tab_name_1">微信精选</string>
    <string name="tab_name_2">美女社区</string>
    <string name="tab_name_3">个人中心</string>
    <string name="text_setting">设置</string>
    <string name="to_mainPage">进入主页</string>
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_register_btn">注册</string>
    <string name="login_remember">记住密码</string>
    <string name="login_forget_pw">忘记密码</string>
    <string name="register_username">用户名</string>
    <string name="password">密码</string>
    <string name="password_check">再输一遍</string>

</resources>
