<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/gif"
    >

   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="10dp"
       android:alpha="0.7"
       >

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/user_name"
               android:hint="@string/register_username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <EditText
               android:id="@+id/pass_word"
               android:hint="@string/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <EditText
               android:id="@+id/pass_word_check"
               android:hint="@string/password_check"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <RadioGroup
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <RadioButton
                   android:text="男"
                   android:checked="true"
                   android:textColor="@color/colorAccent"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <RadioButton
                   android:text="女"
                   android:textColor="@color/colorAccent"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </RadioGroup>

       </LinearLayout>

   </android.support.v7.widget.CardView>


</LinearLayout>